// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-passage redirects to a matched react route 1`] = `
<p>
  Redirected!
</p>
`;

exports[`react-passage when a route is matched matches the snapshot 1`] = `
<a
  data-safelink-type="link"
  href="/get-started/plan/shave"
  onClick={[Function]}
>
  Shave Core
</a>
`;

exports[`react-passage when a route is matched matches with a function that returns a location object 1`] = `
<a
  data-safelink-type="a"
  href="/"
>
  Shave Core
</a>
`;

exports[`react-passage when a route is matched matches with a location object 1`] = `
<a
  data-safelink-type="link"
  href="/get-started/plan/shave"
  onClick={[Function]}
>
  Shave Core
</a>
`;

exports[`react-passage when a route is matched renders a Link tag with Query Parementers 1`] = `
<ForwardRef
  to="/get-started?source=foo&medium=nav"
>
  Shave Core
</ForwardRef>
`;

exports[`react-passage when a route is unmatched matches the snapshot 1`] = `
<a
  data-safelink-type="a"
  href="/blades"
>
  Blades
</a>
`;

exports[`react-passage when there is no context matches the snapshot 1`] = `
<a
  data-safelink-type="a"
  href="/blades"
>
  Blades
</a>
`;
